Add project page

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>Some Website</title>
-  </head>
+    <title>About</title>
+
   <body>
-    {{> title}}
+  <div class='container'>
+      {{> title}}
+
     <p>Some text here</p>
 
     {{> footer}}
+</div>
   </body>
 </html>
