--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -2,15 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Some Website</title>
+    <title>projects</title>
   </head>
   <body>
     <div class='container'>
     {{> title}}
 
-<p>{{screamIt welcomeMessage}}</p>
+    <p>Here are all my projects</p>
 
-  {{> footer}}
-</div>
+    {{> footer}}
+  </div>
   </body>
 </html>
